Multiple changes: - Added gasFiles subfolder - Refactored script.gs - Modified short youtube link to https

--- a/basic/YoutubeVideoSearcher/gasFiles/youtubeVideoSearcherTemplate.html
+++ b/basic/YoutubeVideoSearcher/gasFiles/youtubeVideoSearcherTemplate.html
@@ -65,7 +65,7 @@
       var json = JSON.parse(response);
       var item = json.items[index];
       
-      var url = 'http://youtu.be/' + item.id.videoId;
+      var url = 'https://youtu.be/' + item.id.videoId;
       var title = item.snippet.title;
       var thumbnailUrl = item.snippet.thumbnails.medium.url;
       
